<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserActivity">

    <View
        android:id="@+id/bg_topbar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/classic_color"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/bg_topbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bg_topbar"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:textSize="28dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/bg_topbar"
        app:layout_constraintBottom_toBottomOf="@id/bg_topbar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bg_topbar"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_name"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_name"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_surname"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/harry_potter"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_change"
        android:layout_marginTop="4dp"
        android:textColor="@color/classic_color"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_or_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="36dp"
        android:text="@string/btn_add_or_save"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_change" />

</androidx.constraintlayout.widget.ConstraintLayout>